re-wrote parts of Chapter 5

--- a/UCPbook.bib
+++ b/UCPbook.bib
@@ -962,7 +962,14 @@ doell66,
    Pages = {1060-1061},
    Year = {1966} }
 
-
+@article{dunlop06,
+   author = {Dunlop, D. J. and Carter-Stiglitz, B.},
+   title = {Day plots of mixtures of superparamagnetic, single-domain, pseudosingle-domain, and multidomain magnetites},
+   journal = {J. Geophy.  Res.},
+   volume = {111},
+   doi = {10.1029/2006JB004499},
+   year = {2006}
+}
 
 @article{
 dunlop02b,
@@ -971,7 +978,7 @@ dunlop02b,
    Journal = {J. Geophys. Res},
    Volume = {107},
    Pages = {doi:10.1029/2001JB000487},
-   Year = {2002} }
+   Year = {2002b} }
 
 
 
@@ -982,7 +989,7 @@ dunlop02a,
    Journal = {J. Geophys. Res.},
    Volume = {107},
    Pages = {doi:10.1029/2001JB000486},
-   Year = {2002} }
+   Year = {2002a} }
 
 
 
