Fixed Chapter 1 Problem Sets

--- a/WebBook3.tex
+++ b/WebBook3.tex
@@ -49,7 +49,7 @@
 
  
  
- \title{Essentials of  Paleomagnetism: Third Web Edition}
+ \title{Essentials of  Paleomagnetism: Fourth Web Edition}
  \author{Lisa Tauxe\\Scripps Institution of Oceanography\\La Jolla, CA 92093-0220\\ \\
   with contributions from: \\ Subir K. Banerjee, Robert F. Butler and Rob van der Voo}
   \today
@@ -61,7 +61,7 @@ Requests for re-use of digital images: contact the \href{http://http://www.ucpre
 
 Proper citation of the material found in these pages is: 
 
-Tauxe, L, Banerjee, S.K., Butler, R.F. and van der Voo R, Essentials of Paleomagnetism, 3rd Web Edition, 2014. 
+Tauxe, L, Banerjee, S.K., Butler, R.F. and van der Voo R, Essentials of Paleomagnetism, 4th Web Edition, 2016. 
 
 The printed version of this book appeared January, 2010. Order a \href{http://www.ucpress.edu/books/pages/11183.php}{printed version}. (cheaper than printing it yourself!)
 
