--- a/preface.tex
+++ b/preface.tex
@@ -115,7 +115,7 @@ The problems in this book are intended to be solved with Jupyter Notebooks in co
 
 The problems at the end of each chapter assume proficiency in both Python programming and the use of Jupyter notebooks.   See \href{https://nbviewer.jupyter.org/github/ltauxe/Python-for-Earth-Science-Students/blob/master/Lecture_01_syllabus.ipynb}{Python Programming  for Earth Scientists} for a complete course.   
 
-For examples on how to use PmagPy in a Jupyter notebook, see data\_files/notebooks/\_PmagPy\_nb.ipynb.   
+For examples on how to use PmagPy in a Jupyter notebook, see PmagPy.ipynb in your data\_files directory.   
 
 
 
@@ -127,11 +127,11 @@ For examples on how to use PmagPy in a Jupyter notebook, see data\_files/noteboo
 LT is the primary author of this book who bears sole responsibility for all mistakes.  There are significant contributions by RFB, SKB and RvdV.     We are indebted to many people for assistance
 great and small.  This book began life as a set of lecture notes based loosely on the earlier book by Tauxe (1998).  Many pairs of
 eyes hunted down errors  in the text
-and  the programs each time the course was given.  The course was also occasionally co-taught with Cathy Constable and Jeff Gee who contributed significantly to  the development of the manuscript and the proof-reading there-of.   Thanks go to the many ``live'' and ``online'' students who patiently worked through various drafts.  Special thanks go to Kenneth Yuan,  Liu Cy , Maxwell Brown and Michael Wack who provided many detailed comments and helpful suggestions.   Reviews by Ken Kodama, Brad Clement, Scott Bogue and Cor Langereis improved the book substantially.   Also, careful proof-reading by Newlon Tauxe of the first few chapters is greatly appreciated.
+and  the programs each time the course was given.  The course was also occasionally co-taught with Cathy Constable and Jeff Gee who contributed significantly to  the development of the manuscript and the proof-reading there-of.   Thanks go to the many ``live'' and ``online'' students who patiently worked through various drafts.  Special thanks go to Kenneth Yuan,  Liu Cy , Maxwell Brown and Michael Wack who provided many detailed comments and helpful suggestions.   Reviews by Ken Kodama, Brad Clement, Scott Bogue and Cor Langereis improved the book substantially.   Also, careful proof-reading by Newlon Tauxe of the first few chapters is greatly appreciated.  And of course, I am deeply grateful to my mentors, Dennis V. Kent and Neil D. Opdyke who taught me how to do science. 
 
 
 I owe a debt of gratitude to the many sources of public domain software that
-ended up in the package {\bf PmagPy}, including contributions by  Cathy Constable, Monika Korte, Jeff Gee, Peter Selkin,  Ron Shaar, Nick Swanson-Hysell,  Ritayan Mitra and especially Lori Jonestrask,  as well as the many dedicated contributors to the Numpy, Matplotlib,  Basemap, and Pandas  Python modules used extensively by {\bf PmagPy.}  Also, many illustrations were prepared with the excellent programs {\bf Magmap, Contour} and {\bf Plotxy} by Robert L. Parker, to whom I remain deeply grateful.  
+ended up in the package {\bf PmagPy}, including contributions by  Cathy Constable, Monika Korte, Jeff Gee, Peter Selkin,  Ron Shaar, Nick Swanson-Hysell,  Ritayan Mitra and especially Lori Jonestrask,  as well as the many dedicated contributors to the Numpy, Matplotlib,  Basemap, Cartopy, and Pandas  Python modules used extensively by {\bf PmagPy.}  Also, many illustrations were prepared with the excellent programs {\bf Magmap, Contour} and {\bf Plotxy} by Robert L. Parker, to whom I remain deeply grateful.  
 I  gratefully acknowledge   the authors of many earlier  books, too many to name but included in the Bibliography,  which both educated and inspired me.
 
 
