modified:   EPSFiles/meas15.eps 	modified:   UCPbook.bib 	modified:   WebBook3.bbl

--- a/UCPbook.bib
+++ b/UCPbook.bib
@@ -2,12 +2,22 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Lisa Tauxe at 2018-07-22 15:39:13 -0700 
+%% Created for Lisa Tauxe at 2020-01-28 16:00:34 -0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{watson83,
+	Author = {Watson, G.S.},
+	Date-Added = {2020-01-28 16:00:32 -0800},
+	Date-Modified = {2020-01-28 16:00:32 -0800},
+	Publisher = {Wiley-Interscience},
+	Series = {The University of Arkansas lecture notes in the mathematical sciences},
+	Title = {Statistics on Spheres},
+	Volume = {6},
+	Year = {1983}}
 
 @article{thebault15,
 	Author = {Th\'ebault, E. and Finlay, C.C. and Beggan, C.D. and Alken, P. and Aubert, J. and Barrois, O. and Bertrand, H. and Bondar, T. and Boness, A. and Bocco, L. and Canet, E. and Chambodut, A. and Chulliat, A. and Coisson, P. and Civet, F. and Du, A. and Fournier, A. and Fratter, I. and Gillet, N. and Hamilton, B. and Hamoudi, M. and Hulot, G. and Jage, T. and Korte, M. and Kuang, W. and Lalanne, X. and Langlais, B. and L\'eger, J.-M. and Lesur, V. and Lowes, F. and Macmillan, S. and Mandea, M. and Manoj, C. and Maus, S. and Olsen, N. and Petrov, V. and Ridley, V. and Rother, M. and Sabaka, T.J. and saturnino, D. and Schachtschneider, R. and Sirol, O. and Tangborn, A. and Thomson, A. and Toffner-Clausen, L. and Vigneron, P. and Wardinski, I. and Zvereva, T.},
@@ -3737,8 +3747,9 @@
 	Volume = {7},
 	Year = {1956}}
 
-@article{watson83,
+@article{watson83b,
 	Author = {Watson, G.S.},
+	Date-Modified = {2020-01-28 16:00:28 -0800},
 	Journal = {J. Stat. Plann. Inference},
 	Pages = {245-256},
 	Title = {Large sample theory of the Langevin distributions},
