Fixed equation for MAD in Chapter 9

--- a/WebBook3.tex
+++ b/WebBook3.tex
@@ -13,7 +13,7 @@
 \long\def\@makecaption#1#2{%
   \vskip\abovecaptionskip
   \sbox\@tempboxa{{\captionfonts #1: #2}}%
-  \ifdim \wd\@tempboxa >\hsize
+  \ifdim \wd\@tempboxa >\hsize\
     {\captionfonts #1: #2\par}
   \else
     \hbox to\hsize{\hfil\box\@tempboxa\hfil}%
